# TradingCatBotClient

./: CMakeLists.txt  filter.cpp  filter.h  httpsquery.cpp  httpsquery.h  localconfig.cpp  localconfig.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resurce.qrc  types.cpp  types.h  usermessage.cpp  usermessage.h  usermessage.ui
